# FitPlanBot

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 59be0754d297_add_missing_subscription_fields.py  c143178f0fba_initial_migration.py
scripts/: add_test_data.py  check_data.py
src/admin/: web.py
src/bot/: __main__.py
src/bot/dialogs/questionnaire/: __init__.py  handlers.py  states.py  windows.py
src/bot/handlers/: menu.py  profile.py  start.py  workouts.py
src/bot/keyboards/: main_menu.py
src/bot/middlewares/: acl.py  logging.py  stats.py
src/database/: models.py  session.py
src/database/repositories/: subscription_repo.py  user_repo.py
src/services/: file_service.py  matching.py
src/utils/: validators.py
